fix opacity on safari

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Informatica Pereyra - Theme
 Author: Alan Pereyra
 Author URI: https://informatica.pereyra.online/alanpereyra57
 Description: Inforatica Pereyra es un tema integramente hecho por Alan Pereyra para cubrir las necesidades de desarrollo online de sus clientes. Pensado para ser gestionado por personas sin ningún conocimiento de programación. Es un tema minimalista flat desing, pensado con la filosofía de menos es más. Hecho en PHP, CSS, HTML5 y Javascript.
-Version: 1.8.9
+Version: 1.9.0
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: informatica_pereyra
@@ -806,6 +806,8 @@ audio:focus{
       }
     }
     .fadein{
+			-webkit-animation-name: fadeIn;
+			-webkit-animation-duration: 1s;
         animation-name: fadeIn;
         animation-duration: 1s;
     }
@@ -813,6 +815,8 @@ audio:focus{
 		-webkit-opacity: 1!important;
 		-khtml-opacity: 1!important;
 		opacity: 1!important;
+		-webkit-animation-name: fadeIn;
+	  -webkit-animation-duration: .5s;
 		animation-name: fadeIn;
 		animation-duration: .5s;
 	}
